Got capes working again. Cut out a ton of unnecessary stuff from the old developercapes lib